--- a/web/text_layer_builder.css
+++ b/web/text_layer_builder.css
@@ -61,6 +61,8 @@
       );
     }
 
+    margin: -1px;
+    padding: 1px;
     background-color: var(--highlight-bg-color);
     backdrop-filter: var(--highlight-backdrop-filter);
     border-radius: 4px;
@@ -69,9 +71,15 @@
       position: initial;
     }
 
-    &.begin,
-    &.middle,
+    &.begin {
+      border-radius: 4px 0 0 4px;
+    }
+
     &.end {
+      border-radius: 0 4px 4px 0;
+    }
+
+    &.middle {
       border-radius: 0;
     }
 
